# rust_trait

./: Cargo.toml
rust_trait/: Cargo.toml
rust_trait/src/: common.rs  lib.rs
rust_trait/src/external_module/: error.rs  mod.rs  response.rs
rust_trait/src/module_a/: mod.rs
rust_trait/src/module_b/: error.rs  mod.rs
rust_trait_derive/: Cargo.toml
rust_trait_derive/src/: lib.rs
src/: common.rs  main.rs
src/external_module/: do_external.rs  error.rs  mod.rs
src/module_a/: do_a.rs  error.rs
src/module_b/: do_b.rs  error.rs
