[package]
name = "rust_trait"
version = "0.1.0"
edition = "2021"

[features]
derive = ["rust_trait_derive"]

[dependencies]
async-trait = "0.1.73"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
rust_trait_derive = { path = "../rust_trait_derive", optional = true }
